# BasicOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/time/: time.c  time.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/string_/: CMakeLists.txt  string_.c  string_.h
libs/data_structures/string_/tasks/: assert_string.c  assert_string.h  tasks.c  tasks.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
